remove forward slash

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <main>
         <h2>The basic Language of Web: HTML</h2>
-        <img src="/img/laura-jones.jpg" alt="laura-jones">
+        <img src="img/laura-jones.jpg" alt="laura-jones">
         <p>Posted by <b>laura Jones</b> on Monday, June 21st 2027</p>
-        <img src="/img/post-img.jpg" alt="post-img">
+        <img src="img/post-img.jpg" alt="post-img">
         <button> 🧡 Like</button>
         <p>
             All modern websites and web applications are built using three fundamental technologies: HTML, CSS and
@@ -58,14 +58,14 @@
         <p>Hopefully you learned something new here</p>
         <h4>Related Posts</h4>
         <ul>
-            <li><img src="/img/related-1.jpg" alt="jonas" , width="100" , height="100"> <a
+            <li><img src="img/related-1.jpg" alt="jonas" , width="100" , height="100"> <a
                     href="https://web.dev/learn">How to learn Web
                     Development</a><br><b>By Jonas Schmedtmann</b>
             </li><br>
-            <li><img src="/img/related-2.jpg" alt="CSS" width="100" height="100"> <a
+            <li><img src="img/related-2.jpg" alt="CSS" width="100" height="100"> <a
                     href="https://shorturl.at/AoErI">The unknown Power of CSS</a><br><b>By Jim Dillon</b><br><br>
             </li>
-            <li><img src="/img/related-3.jpg" alt="JavaScript" width="100" height="100"><a
+            <li><img src="img/related-3.jpg" alt="JavaScript" width="100" height="100"><a
                     href="https://shorturl.at/MdopY">Why JavaScript is Awesome</a><br><b>By Matilda
                 </b>
             </li>
